[package]
name = "yetai-rs"
version = "0.0.1"
edition = "2021"
authors = ["kylin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["jdsdk"]

jdsdk = []