[package]
name = "yetai-rs"
version = "0.0.1"
edition = "2018"
authors = ["kylin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }
async-recursion = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["request", "jdy"]
request = []
jdy =[]
